# eyrc-24-25-warehouse-drone

./: .gitmodules  CMakeLists.txt  ReadME.md
src/: turtle_frame.cpp
swift_pico/: CMakeLists.txt  package.xml
swift_pico/config/: map_bridge.yaml  swift_pico_bridge.yaml
swift_pico/launch/: map_2b.launch.py  pico.launch.py  task_1b.launch.py  task_1b_submission_cpp.launch.py  task_1b_submission_py.launch.py  task_2a.launch.py  task_2a_submission_cpp.launch.py  task_2a_submission_py.launch.py  task_2b.launch.py  task_2b_submission_cpp.launch.py  task_2b_submission_py.launch.py  task_2c.launch.py  task_2c_submission_cpp.launch.py  task_2c_submission_py.launch.py  warehouse.launch.py
swift_pico/scripts/: map.cpp  map.py  whycon_mapper.py
swift_pico/src/: path_planning_service.cpp  pico_client.py  pico_controller.cpp  pico_controller.py  pico_server.py  waypoint_service.py
swift_pico/worlds/: swift_pico_arena_world.sdf  warehouse_world.sdf
swift_pico_description/: CMakeLists.txt  package.xml
swift_pico_description/models/arena/: model.config  model.sdf
swift_pico_description/models/arena/meshes/: arena.dae  rack.STL
swift_pico_description/models/package_1/: model.sdf
swift_pico_description/models/package_2/: model.sdf
swift_pico_description/models/package_2/meshes/: package.dae
swift_pico_description/models/package_3/: model.sdf
swift_pico_description/models/package_4/: model.sdf
swift_pico_description/models/package_5/: model.sdf
swift_pico_description/models/package_6/: model.config
swift_pico_description/models/swift_pico/: model.config  swift_pico.sdf  whycon_marker_file.xacro
swift_pico_description/models/swift_pico/materials/scripts/: whycon_marker.material
swift_pico_description/models/swift_pico/meshes/: base_link.dae  m1_link.dae  m2_link.dae  m3_link.dae  m4_link.dae  propeller_ccw.dae  propeller_cw.dae  whycon2.mtl
