<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swift_pico_description</name>
  <version>0.0.0</version>
  <description>SD format description for the swift_pico</description>
  <maintainer email="shakthimagenderan@gmail.com">shakthi magenderan</maintainer>
  <license>MIT</license>
  <author>shakthi magenderan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>